# VAE-vision

./: .gitignore  ACTION_PLAN.md  CLAUDE.md  CURRENT.md  PLAN.md  main.py  pyproject.toml
src/VAE_vision/: data.py  exploration.py  flip_hands.py  hand_types.py  main.py  mask.py  pipeline.py  training.py  utils.py  vq_model.py
src/VAE_vision/pixel_cnn/: encode_dataset.py  exploration.py  model.py  training.py
src/VAE_vision/vae/: model.py  training.py
src/VAE_vision/vq/: model.py  training.py
tutorials/: cv-bbox-crop-landmarks.md  mediapipe-hand-detection.md  vae-training.md
